Changes since Lynx 2.8 release
===============================================================================

2004-04-22 (2.8.5rel.2 fixes from 2.8.6dev.1)
* correct ifdef in LYgetattrs() to ensure that getattrs() is used only if the
  configure script actually found it (report/patch by Paul Gilmartin).
* correct LYcommandList() to allocate data passed to HTList_addObject(), since
  LYRemoveFromCloset() may free it (report by FLWM) -TD
* add a null-pointer check to parameter of HTQuoteParameter(), fixes bug
  introduced in 2.8.5pre.4 (report by FLWM) -TD
* correct units shown by HTReadProgress() for very low rates - bug from
  2.8.5pre.3 changes (report by PG) -TD
* update current-version in README -LP

2004-02-04 (2.8.5rel.1)
* build fixes for MINGW32 -DK
* build fixes for OS/2 (reported by IZ) -TD

2004-02-02 (2.8.5pre.5)
* MINGW32-specific changes to build with that configuration using the configure
  script in Cygwin and "-mno-cygwin" option -DK
* move Cygwin defines for WIN_EX, _WINDOWS_NSL out of www_tcp.h, to the
  configure script to fix a definition-order problem with CAN_CUT_AND_PASTE
  (report by DK) -TD
* improve workaround for ncurses to build with pre-4.0 versions that do not
  declare attr_t -TD

2004-01-28 (2.8.5pre.4)
* workaround to build with ncurses 4.2 -TD
* fixes from Thorsten Glaser:
  + use ${GNUSYSTEM_AUX_DIR}/mkinstalldirs if it exists.
  + use $ac_config_sub variable in CF_CHECK_CACHE macro.
  + add case in CF_XOPEN_SOURCE macro to prevent defining _XOPEN_SOURCE
  + use $(MKINSTALLDIRS) variable in generated makefile.
  + correct comment in lynx.cfg for the default value of FTP_PASSIVE 
  + increase pattern length for mkdtemp() call.
* add command-line & menu option/config variables to replace the compile-time
  UNDERLINE_LINKS definition (suggested by BL) -TD
* correct ownership of installed lynx_doc directory (report by FLWM, PG) -TD
* modify configure check for tar to test several common variants including